--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body {
   font-family: 'Press Start 2P', cursive;
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  /* Rules below not implemented in browsers yet */
+  -o-user-select: none;
+  user-select: none;
 }
 
 a {
