--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
     font-family:'Press Start 2P', cursive;
-    -webkit-user-select: none; /* Chrome/Safari */        
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+ */
-
+    font-size: .6em;
+    -webkit-user-select: none;
+    /* Chrome/Safari */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* IE10+ */
     /* Rules below not implemented in browsers yet */
     -o-user-select: none;
     user-select: none;
@@ -20,7 +23,7 @@ div {
     width: 100%;
     height: 600px;
 }
-div div {
+div .box {
     width: 1%;
     height: 1%;
     outline: 0px solid #fff;
@@ -45,6 +48,9 @@ div div {
 .black {
     background: black;
     color: white;
+}
+.custom {
+    background: black;
 }
 .pallette {
     height: 1em;
